cmake_minimum_required(VERSION 2.8)
CMAKE_policy(SET CMP0015 NEW)

project(cos-cpp-sdk)
SET(CMAKE_C_COMPILER g++)
set(LIBRARY_OUTPUT_PATH ../lib)
include_directories(../include)
link_directories(../lib)
file(GLOB_RECURSE cossdk_source_files "*.cpp")
add_library(cossdk STATIC ${cossdk_source_files})
if (__USE_L5)
    MESSAGE("use l5")
    add_definitions(-D__USE_L5)
    target_link_libraries(cossdk curl ssl rt jsoncpp qos_client stdc++ pthread z)
ELSE()
    target_link_libraries(cossdk curl ssl rt jsoncpp stdc++ pthread z)
ENDIF()

set_target_properties(cossdk PROPERTIES OUTPUT_NAME "cossdk")
